<resources>
    <string name="msg_wifi_enabled">Wifi enabled</string>
    <string name="msg_mobile_data_enabled">Mobile data enabled</string>
    <string name="msg_not_connected_to_internet">Not connected to Internet</string>

    <string name="log_fcm_message_id">"FCM Message Id: "</string>
    <string name="log_fcm_notification_message">"FCM Notification Message: "</string>
    <string name="log_fcm_data">"FCM Data Message: "</string>
    <string name="log_fcm_data_message">"FCM Data Message:(TA)G "</string>
    <string name="text_ok">OK</string>
    <string name="text_exit">Exit</string>
    <string name="text_retry">Retry</string>
    <string name="session_expired">Session expired.</string>
    <string name="loading">Loading…</string>

    <!-- Image Chooser -->
    <string name="text_cancel">Cancel</string>
    <string name="text_camera">Camera</string>
    <string name="text_setting">Settings</string>
    <string name="text_gallery">Gallery</string>
    <string name="text_multiple">Multiple</string>
    <string name="text_choose_image">Choose Image</string>
    <string name="permission_camera_storage_msg">Permissions are required for camera &amp; storage.</string>
    <string name="permission_camera_storage_denied_msg">Permissions denied. Please grant permission for camera &amp; storage in setting.</string>

    <!--Error-->
    <string name="error_email_field_empty">Please enter email address.</string>
    <string name="error_invalid_email">Please enter valid email address.</string>
    <string name="error_password_field_empty">Please enter password.</string>
    <string name="error_confirm_password_field_empty">Please enter confirm password.</string>
    <string name="error_password_must_be_greater_than_5_character">Password must be greater than 5 character.</string>
    <string name="error_phone_number_field_empty">Please enter phone number.</string>
    <string name="error_invalid_phone_number">Please enter valid phone number.</string>
    <string name="error_first_name_field_empty">Please enter first name</string>
    <string name="error_name_field_empty">Please enter name</string>
    <string name="error_last_name_field_empty">Please enter last name</string>
    <string name="error_name_two_character_long">Name must contain at least two characters</string>
    <string name="error_first_name_two_character_long">First name must contain at least two characters</string>
    <string name="error_last_name_two_character_long">Last name must contain at least two characters</string>
    <string name="error_name_special_number_character">Name cannot contain number &amp; special characters</string>
    <string name="error_first_name_special_number_character">First name cannot contain number &amp; special characters</string>
    <string name="error_last_name_special_number_character">Last name cannot contain number &amp; special characters</string>
    <string name="error_password_mismatch">Password Mismatch!</string>
    <string name="error_no_files_added">No files added</string>
    <string name="error_device_not_supported">This device is not supported.</string>
    <string name="error_internet_not_connected">Not connected to internet. Please check your internet connection or try again later.</string>
    <string name="error_fb_login_failed">Facebook Login failed!!</string>
    <string name="error_not_a_valid_image_file">File is not a valid image.</string>

    <string name="rationale_ask_again">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>
    <string name="title_settings_dialog">Permissions Required</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="name">Name</string>
    <string name="phonenumber">Phone Number</string>

    <string name="hint_signup_phone">Phone Number</string>
    <string name="hint_signup_fname">First Name</string>
    <string name="hint_signup_lname">Last Name</string>
    <string name="hint_signup_email">Email</string>
    <string name="hint_signup_dob">Date Of Birth</string>
    <string name="hint_signup_pass">Password</string>
    <string name="hint_signup_conf_pass">Confirm Password</string>
    <string name="text_signup_btn">Sign Up</string>
    <string name="text_signup_country">+91</string>
    <string name="text_signup_gender">Select \nGender :</string>
    <string name="radio_signup_male">Male</string>
    <string name="radio_signup_female">Female</string>
    <string name="spinner_orientation_hindu">Hindu</string>
    <string name="spinner_orientation_sikh">Sikh</string>
    <string name="spinner_orientation_christian">Christian</string>
    <string name="error_select_gender">Please select a gender!</string>
    <string name="error_match_password">Passwords do not match!!</string>
    <string name="error_accept_terms">Please accept terms and conditions!</string>
    <string name="error_invalid_date">DOB must be a valid yyyy-MM-dd format</string>


    <string name="text_btn_signin">Sign In</string>
    <string name="text_btn_signin_fb">Sign In With Facebook</string>
    <string name="text_forgot_pass"><u> Forgot Password?</u></string>
    <string name="text_remember_me">Remember Me</string>
    <string name="hint_signin_email_phone">Email/Phone Number</string>
    <string name="terms_conditions">I accept <u> Terms of Service </u>and <u>Privacy Policy</u></string>


    <string name="text_tv_access_token">Access Token :</string>
    <string name="text_tv_first_name">First Name :</string>
    <string name="text_tv_last_name">Last name:</string>
    <string name="text_tv_id">ID:</string>
    <string name="text_tv_created_at">Created At:</string>
    <string name="text_tv_updated_at">Updated At:</string>
    <string name="text_tv_dob">DOB:</string>
    <string name="text_tv_country_code">Country Code:</string>
    <string name="text_tv_phone">Phone:</string>
    <string name="text_tv_user_image">User Image:</string>
    <string name="text_tv_gender">Gender :</string>
    <string name="text_tv_about">About:</string>
    <string name="text_tv_drinking">Drinking:</string>
    <string name="text_tv_language">Language:</string>

</resources>
